second error correction

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                         <th>Result Rating(1-5)</th>
                     </tr>
                 </thead>
-                <body>
                     
                     <tr>
                         <td>Pumpkin Roll</td>
@@ -58,7 +57,6 @@
                         <td>Cake Flour</td>
                         <td>2.5 (It cracked)</td>
                     </tr>
-                </body>
             </table>
 
             <p>My first attempt was good with the combination of a French baking technique with a Southern American pie recipe. But the crust was soggy which is not great in pie-making</p>
@@ -78,7 +76,7 @@
                 <p>My next baking project involves two of my all-time favorite flavor profiles: Tiramasu and Matcha. The joy of Tiramisu is in its assembly, which makes it an excellent choice for beginner bakers looking for a decadent reward without complex oven work. The layered complexity of coffee-soaked ladyfingers, rich mascarpone cream, and a dusting of cocoa is sheer perfection. It relies heavily on ingredient quality, specifically the rich Italian mascarpone cheese and strong espresso, which must be perfectly cooled before dipping the ladyfingers. I'm currently sourcing authentic Italian Mascarpone for my Tiramisu, as the qualtiy of the cheese makes all the difference in that dessert.  Next my all-time favorite flavor profile, Matcha, I'm fasincated by the earthy, slighty bitter notes. I've been saving recipes for Matcha brownies, creamy mousses, and danishes. It's a flavor that requires a gentle touch, as it can easily become overpowering. My goal is to master a Matcha cake with a subtle, sweet filling that complements the tea flavor, rather than overwhelming it. The challenge of achieving that bright green color and sublte sweetness in the cake is what is so appealing to me. I'm waiting on a shipment of ceromonial grade powder from Naoki Matcha. The right ingredients are half the battles in these recipes. The complexity of these two dishes keeps me engaged and constantly learning new skills. </p>
             </section>
 
-            < <figure>
+            <figure>
                 <img src="Tiramisu_cake.jpg" alt="A photo of a tiramasu cake">
                 <img src="matcha_cake.jpg" alt="A photo of matcha cake">
             </figure>
@@ -89,7 +87,7 @@
         <section>
             <h2>Join the Baking Newsletter!</h2>
             <p>Get the latest recipes and baking adventures delivered to your inbox.</p>
-            <form action=" " method="POST">
+            <form action="#" method="POST">
                 <div>
                     <label for="newsletter_name">Emails Address</label>
                     <input type="text" id="newsletter_name" name="name" required >
