--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <h2>Get In Touch</h2>
         <p>Use the form below to send me a message!</p>
 
-        <form action=" " method="POST">
+        <form name="contact" method="POST" data-netlify="true">
             <div>
                 <label for="contact_name">Your Name</label>
                 <input type="text" id="contact_name" name="name" required>
