--- a/index.html
+++ b/index.html
@@ -93,21 +93,14 @@
         <section>
             <h2>Join the Baking Newsletter!</h2>
             <p>Get the latest recipes and baking adventures delivered to your inbox.</p>
-            <form action="#" method="POST">
-                <div>
-                    <label for="newsletter_name">Emails Address</label>
-                    <input type="text" id="newsletter_name" name="name" required >
-                </div>
-                    
-                <div>
-                    <label for="newsletter_email">Email Address:</label>
-                    <input type="email" id="newsletter_email" name="email" required>
-                </div>
+            <form>
 
-                <div>
-                    <button type="submit">Sign Up</button>
-                </div>
             </form>
+               <label for="newsletter_name">Emails Address:
+               <input type="text">
+               </label>
+                <button type="submit">Sign Up</button>
+             </form>
         </section>
 
     </main>
