--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
         <section>
             <h2>Join the Baking Newsletter!</h2>
             <p>Get the latest recipes and baking adventures delivered to your inbox.</p>
-            
 
-            <form>
+            <form name="newsletter-signup" method="POST" action="/success" data-netlify="true">
                <label for="newsletter_name">Emails Address:
                <input type="text">
                </label>
