--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 
                 <p>Use the form below to send me a message! I look forward to hearing from you.</p>
 
-                <form name="contact" method="POST" action="/success" data-netlify="true" class="contact-form-layout">
+                <form name="contact" method="POST" data-netlify="true" class="contact-form-layout">
                     
                     <div>
                         <label for="contact_name">Your Name</label>
