--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h2 class="heading-accent">Join the Baking Newsletter!</h2>
                 <p>Get the latest recipes and baking adventures delivered to your inbox.</p>
 
-                <form class="newsletter-form" name="newsletter-signup" method="POST" action="/success" data-netlify="true">
+                <form class="newsletter-form" name="newsletter-signup" method="POST" data-netlify="true">
                     <label for="email-input">Emails Address:</label>
                     <input type="email" id="email-input" name="email" placeholder="you@example.com" required> 
                     <button type="submit" class="button-primary">Sign Up</button> 
